[package]
name = "eget"
version = "0.1.0"
authors = ["XtremeDevX <xtremedevx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
reqwest = "0.7"
clap = "2"
term = "0.4"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
colored = "2.0.0"
time = "0.2.26"
winapi = "0.3.9"
crossbeam-channel = "0.5.1"